[package]
name    = "intruder_alert_system"
version = "0.1.0"
edition = "2021"

[dependencies]
nokhwa  = { version = "0.10", features = ["input-native"] }
image   = { version = "0.24", features = ["png", "jpeg"] }
lettre  = { version = "0.11", features = ["smtp-transport", "builder"] }
chrono  = "0.4"
escapi  = "4.0.0"

[profile.release]
opt-level = 3
strip     = true