[package]
name    = "security-cam"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "security_cam"  
path = "src/lib.rs"

[[bin]]
name = "warm"
path = "src/warm.rs"

[[bin]]
name = "capture"
path = "src/capture.rs"

[[bin]]
name = "release"
path = "src/release.rs"

[[bin]]
name = "mailer"
path = "src/mailer.rs"

[[bin]]
name = "dashboard"
path = "src/dashboard.rs"

[[bin]]
name = "retry_worker"
path = "src/retry_worker.rs"

[[bin]]
name = "db_writer"
path = "src/db_writer.rs"

[[bin]]
name = "controller"
path = "src/controller.rs"

[dependencies]
escapi                = "4.0.0"
image                 = { version = "0.24", features = ["jpeg"] }
lettre                = { version = "0.11", features = ["smtp-transport", "builder"] }
chrono                = "0.4"
serde                 = { version = "1", features = ["derive"] }
toml                  = "0.8"
native-windows-gui    = "1.0.13"
native-windows-derive = "1.0.5"
once_cell = "1.19"
dotenv = "0.15"


# ── MongoDB — sync only, no tokio conflict ────────────────
mongodb = {
    version          = "2.8",
    default-features = false,        # ← disables tokio-runtime
    features         = ["sync"]      # ← only sync feature
}
bson = { version = "2.9", features = ["chrono-0_4"] }

[profile.release]
opt-level = 3
strip     = true


